--- a/src/Component/Auth/index.css
+++ b/src/Component/Auth/index.css
@@ -1,25 +1,26 @@
+body {
+    background-color:  #0a1227;
+}
+
 .container {
-    background-color: bisque;
+    background-color: #19284f;
     width: 50%;
     margin: auto;
     margin-top: 50px;
-    padding: 20px;
     border-radius: 10px;
+    padding-bottom: 30px;
 }
 
 .header {
-    width: 60%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 10px;
     margin: auto;
+    margin-bottom: 30px;
     text-align: center;
-    font-size: 35px;
-    margin-bottom: 20px;
-}
-
-.underline {
-    width: 25%;
-    height: 2px;
-    background-color: red;
-    margin: auto;
+    font-size: 45px;
+    background-color: #feba65;
+    color: white;
 }
 
 .form {
@@ -32,10 +33,10 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(198, 195, 195);
+    background-color: #4a5777;
     margin-bottom: 13px;
     border-radius: 5px;
-    color: rgb(44, 68, 101);
+    color: #feba65;
 }   
 
 input {
@@ -45,11 +46,15 @@ input {
     border: none;
     background-color: transparent;
 }
+
+input:focus {
+    outline: none;
+}
  
 .input-img {
     display: flex;
     justify-content: space-evenly;
-    color: rgb(44, 68, 101);
+    color: #feba65;
     margin-top: 20px;
 }
 
@@ -63,29 +68,33 @@ input {
     width: 80%;
     margin: auto;
     font-weight: 400;
-    color: rgb(159 155 155);
+    color: #feba65;
 }
 
 .submits {
     display: flex;
     justify-content: space-between;
-    width: 25%;
+    width: 90%;
 }
 
 .submit {
-    background-color: blue;
-    color: white;
+    background-color: #feba65;
+    color: #19284f;
     border-radius: 20px;
     padding: 8px;
     cursor: pointer;
+    width: 40%;
+    text-align: center;
 }
 
 .state {
     background-color: rgb(218, 194, 194);
-    color: white;
+    color: #19284f;
     border-radius: 20px;
     padding: 8px;
     cursor: pointer;
+    width: 40%;
+    text-align: center;
 }
 
 
