--- a/src/Component/Auth/index.css
+++ b/src/Component/Auth/index.css
@@ -1,5 +1,6 @@
 body {
     background-color:  #0a1227;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -26,7 +27,7 @@ body {
 .form {
  width: 80%;
  margin: auto;
- padding: 30px;
+ padding: 5px;
 }
 
 .inputs {
@@ -63,8 +64,8 @@ input:focus {
 }
 
 .buttons {
-    display: flex;
-    justify-content: space-between;
+    /* display: flex; */
+    /* justify-content: space-between; */
     width: 80%;
     margin: auto;
     font-weight: 400;
@@ -75,6 +76,7 @@ input:focus {
     display: flex;
     justify-content: space-between;
     width: 90%;
+    margin-top: 15px;
 }
 
 .submit {
