--- a/src/Component/Login/index.css
+++ b/src/Component/Login/index.css
@@ -1,3 +1,9 @@
 .forgot-password {
     font-size: 14px;
 }
+
+.error-message {
+    color: #feba65;
+    text-align: center;
+    padding: 20px;
+}
