--- a/src/Component/ForgetPassword/index.css
+++ b/src/Component/ForgetPassword/index.css
@@ -1,7 +1,7 @@
-.forgetPass {
+/* .forgetPass {
     background-color: white;
 }
-
-input{
-    border: inset;
+input {
+    border-radius: 20px;
 }
+ */
