--- a/src/Component/Register/index.css
+++ b/src/Component/Register/index.css
@@ -55,7 +55,7 @@ input {
     height: 30px;
     border-radius: 7px;
     border: none;
-    background-color: transparent;
+    background-color: #4a5777;
 }
 
 input:focus {
@@ -86,7 +86,6 @@ input:focus {
     display: flex;
     justify-content: space-between;
     width: 90%;
-    margin-top: 15px;
 }
 
 .submit {
