--- a/src/Component/EmailVerification/index.css
+++ b/src/Component/EmailVerification/index.css
@@ -3,7 +3,13 @@ h1 {
     text-align: center;
 }
 
-Link {
-    width: 150%;
+.link {
+    width: 70px;
     margin: auto;
+}
+.goHome {
+    margin: auto;
+    font-size: 16px;
+    text-decoration: none;
+    color: rgb(218, 194, 194);
 }
